[package]
name = "surf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
fern = "0.6.2"
futures = "0.3.30"
indicatif = "0.17.7"
log = "0.4.20"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
serde_yaml = "0.9.31"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
walkdir = "2.4.0"
