[package]
name = "capti"
version = "0.0.14"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
indicatif = "0.17.7"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
serde_yaml = "0.9.31"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "sync"] }
walkdir = "2.4.0"
openssl = { version = "0.10", optional = true }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
